...
    <string name="urlbar_hint">Search or enter address</string>
    <!-- If the user has a URL copied in his/her clipboard, the search bar will offer a button for users to visit the website by a single tap. -->
    <string name="awesomebar_open_copied_link">Open Copied Link</string>
    <!-- A search suggestion for users to tap and switch to the opened tab. -->
    <string name="awesomebar_switch_to_tab">Switch to Tab</string>

    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="menu_help">Help</string>
    <string name="menu_rights">Your Rights</string>
    <string name="menu_give_feedback">Give feedback</string>
    <string name="menu_share_with_friends">Share with friends</string>

    <!-- This is the title of a dialog that shows all the share targets (apps or contacts) when
...
    <!-- Content of about Rocket.
    %1$s is the app name of the content. i.e.x. Firefox Rocket
    %2$s is "Mozilla" -->
    <string name="about_content_body">%1$s is a fast and lightweight browser produced by %2$s. Our mission is to foster a healthy, open internet.</string>
    <string name="about_link_learn_more">Learn more</string>
    <string name="about_link_support">Support</string>
    <string name="about_link_your_rights">Your Rights / Licenses</string>
    <string name="about_link_privacy">Privacy Notice</string>
    <!--Life Feed is an information panel covering content that might help our customers' life. It covers from the most popular topics to the hottest deals, including news, games, coupon...etc.-->
    <string name="life_feed">Life Feed</string>
    <!-- The %1$s here is a placeholder for "Life Feed". Life Feed is an information panel covering content that might help our customers' life. It covers from the most popular topics to the hottest deals, including news, games, coupon...etc.-->
    <string name="about_link_life_feed">Learn more about %1$s</string>

...
    <string name="preference_language_systemdefault">System default</string>

    <!-- This is the title of the dialog for selecting a new default search engine -->
    <string name="preference_dialog_title_search_engine">Default search engine</string>
   
    <!-- This is the title of the dialog for choosing news source -->
    <string name="preference_dialog_title_news_source">News source</string>
   
    <string name="preference_data_saving_block_images">Block images</string>

    <!-- Settings Privacy and storage-->
    <string name="preference_privacy_storage_clear_browsing_data">Clear browsing data</string>
    <string name="preference_privacy_storage_save_downloads_to">Save downloads to </string>
...
    <string name="message_storage_unavailable_cancel_download">Storage inaccessible. Download canceled.</string>
    <string name="message_exit_app">Press BACK again to exit</string>

    <!-- Message indicate how much cache file cause disk storage was cleared.
        Argument 1 is the amount, i.e. 15.0 MB cache cleared -->
    <string name="message_cleared_cached">%1$s cache cleared</string>
    <string name="message_cleared_browsing_data">Browsing data cleared</string>
    <string name="message_deleted_screenshot">Screenshot deleted</string>
    <string name="message_cannot_find_screenshot">Cannot display the screenshot</string>

    <!-- Remove Top site item -->
    <string name="remove">Remove</string>
    <!-- Pin Top site item -->
...
    <!-- In-app Promotion, Rate the App-->
    <!-- The title of the Message to prompt users to rate Rocket on Play Store, %1$s is the App name i.e. Rocket. -->
    <string name="rate_app_dialog_text_title">Love %1$s?</string>
    <string name="rate_app_dialog_text_content">Thank you for choosing our product. Your feedback is important to us.</string>
    <string name="rate_app_dialog_btn_go_rate">Rate Us</string>
    <string name="rate_app_notification_action_rate">RATE US</string>
    <string name="rate_app_dialog_btn_feedback">Leave Feedback</string>
    <string name="rate_app_notification_action_feedback">FEEDBACK</string> 
    <string name="rate_app_feedback_url" translatable="false">https://qsurvey.mozilla.com/s3/Firefox-Lite-v2-5-Survey1</string>
   
    <!-- User satisfaction survey-->
    <!-- The title of the dialog for asking users to take a satisfaction survey, %1$s is the App name. -->
    <string name="survey_dialog_text_title">How do you like %1$s?</string>
...


    <!--In-app Promotion, Share app.-->
    <!-- The title of the Message to prompt users to share Rocket with friends, %1$s is the App name i.e. Rocket. -->
    <string name="share_app_dialog_text_title">Share %1$s with friends!</string>
    <string name="share_app_dialog_text_content">- Fast and lightweight\n- Smart Shopping Search\n- Free Games, trending news</string>
    <string name="share_app_dialog_btn_share">Share</string>
    <string name="share_app_google_play_url" translatable="false">https://mzl.la/2kScptw</string>
    <!-- The message template used when user shares Rocket with friends. %1$s is the App name i.e. Rocket, and %2$s is the Google Play url, and %3$s is "Mozilla"-->
    <string name="share_app_promotion_text">Hey, check out this fast and lightweight browser from %3$s. %1$s %2$s</string> 
    
    <!-- In-app message to update Firefox Lite -->
    <string name="update_app_dialog_btn_update_now">UPDATE NOW!</string>
...
    <!-- This is used in the menu. User can click the menu item and open a private tab. -->
    <string name="private_tab">Private tab</string>

    <!-- This is the title that, when in private browsing mode, will be shown in the Home page (The page with search box). -->
    <string name="private_browsing_title">Private Browsing</string>
    <!-- A notification will be shown when entering private browsing mode, this is the message of the notification notifying the user that tapping the notification will erase the private browsing history. -->
    <string name="private_browsing_erase_message">Erase private browsing history</string>
    <!-- A notification will be shown when entering private browsing mode, this is the label of the action that when tapped, will open Rocket. -->
    <string name="private_browsing_open_action">OPEN</string>
    <!-- A message shown briefly after user have cleared the private browsing history via tapping the notification. -->
    <string name="private_browsing_erase_done">Your private browsing\nhistory has been erased.</string>
    <!-- Show how many trackers blocked on tracker blocked panel. In front of "Trackers blocked", show the number of blocking trackers. --> 
    <string name="private_browsing_tracker_blocked">Trackers blocked</string>
    <!-- A description is shown below the switch of block trackers when opening tracker blocked panel -->
    <string name="private_browsing_tracker_blocked_description">Enjoy browsing with extra protection.</string>
    <!-- Message to prompt users to add private mode shortcut to their device's home. -->
    <string name="private_browsing_dialog_add_shortcut_title">Access private mode in one click! Want to add private mode shortcut to homescreen?</string>
...
