...
    <item name="bottom_bar_pin_shortcut" type="id"/>
    <item name="bottom_bar_bookmark" type="id"/>
    <item name="bottom_bar_refresh" type="id"/>
    <item name="bottom_bar_share" type="id"/>
    <item name="bottom_bar_next" type="id"/>
    <item name="bottom_bar_private_home" type="id"/>
    <item name="bottom_bar_delete" type="id"/>
    <item name="bottom_bar_tracker" type="id"/>
    <item name="bottom_bar_back" type="id"/>
    <item name="bottom_bar_open_in_new_tab" type="id"/>
    <item name="bottom_bar_shopping_search" type="id"/>

    <!--  Spotlight Dialog  -->
...
