...
        android:scaleType="centerInside" />

    <!-- lint: We need to use singleLine=true for the fading edge to work (which is officially deprecated,
         but still needed), hence we ignore deprecated warnings here.. -->
    <org.mozilla.rocket.nightmode.themed.ThemedTextView
        style="?displayUrlAppearance"
        android:id="@+id/display_url"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:layout_marginEnd="8dp"
        android:layout_weight="1"
        android:ellipsize="none"
...
